--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -9,17 +9,17 @@ jobs:
   build: 
     runs-on: ubuntu-latest
 
-  steps:
-      name: Checkout code
-      uses: actions/checkout@v5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
     
-      name: Set Up Node.js
-      uses: actions/setup-node@3
-      with: 
-        node-version: 25
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with: 
+          node-version: 25
 
-      name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
     
-      name: Run tests
-      run: npm test
+      - name: Run tests
+        run: npm test
